# the-idiot

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: controllers.rs  game.rs  main.rs  views.rs
src/controllers/: model_controller.rs  view_controller.rs
src/game/: card.rs  game.rs  history.rs
src/views/: highlight_view.rs  row_view.rs
